update chapter2 section3