@@ -1,4 +1,7 @@
 package org.mqjd.flink.containers.mysql;
+
+import static org.junit.Assert.assertNotNull;
+
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -14,8 +17,6 @@ import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static org.junit.Assert.assertNotNull;
-
 /**
  * Create and populate a unique instance of a MySQL database for each run of JUnit test. A user of
  * class needs to provide a logical name for Debezium and database name. It is expected that there
@@ -27,8 +28,8 @@ import static org.junit.Assert.assertNotNull;
  */
 public class UniqueDatabase {
 
-    private static final String[] CREATE_DATABASE_DDL =
-        new String[] {"CREATE DATABASE `$DBNAME$`;", "USE `$DBNAME$`;"};
+    private static final String[] CREATE_DATABASE_DDL = new String[]{"CREATE DATABASE `$DBNAME$`;",
+        "USE `$DBNAME$`;"};
     private static final String DROP_DATABASE_DDL = "DROP DATABASE IF EXISTS `$DBNAME$`;";
     private static final Pattern COMMENT_PATTERN = Pattern.compile("^(.*)--.*$");
 
@@ -38,22 +39,14 @@ public class UniqueDatabase {
     private final String username;
     private final String password;
 
-    public UniqueDatabase(
-        MySqlContainer container, String databaseName, String username, String password) {
-        this(
-            container,
-            databaseName,
-            Integer.toUnsignedString(new Random().nextInt(), 36),
-            username,
-            password);
+    public UniqueDatabase(MySqlContainer container, String databaseName, String username,
+        String password) {
+        this(container, databaseName, Integer.toUnsignedString(new Random().nextInt(), 36),
+            username, password);
     }
 
-    private UniqueDatabase(
-        MySqlContainer container,
-        String databaseName,
-        final String identifier,
-        String username,
-        String password) {
+    private UniqueDatabase(MySqlContainer container, String databaseName, final String identifier,
+        String username, String password) {
         this.container = container;
         this.databaseName = databaseName + "_" + identifier;
         this.templateName = databaseName;
@@ -81,41 +74,32 @@ public class UniqueDatabase {
         return password;
     }
 
-    /** @return Fully qualified table name <code>&lt;databaseName&gt;.&lt;tableName&gt;</code> */
+    /**
+     * @return Fully qualified table name <code>&lt;databaseName&gt;.&lt;tableName&gt;</code>
+     */
     public String qualifiedTableName(final String tableName) {
         return String.format("%s.%s", databaseName, tableName);
     }
 
-    /** Creates the database and populates it with initialization SQL script. */
-    public void createAndInitialize() {
-        final String ddlFile = String.format("ddl/%s.sql", templateName);
+    /**
+     * Creates the database and populates it with initialization SQL script.
+     */
+    public void createAndInitialize(String chapter, String section) {
+        final String ddlFile = String.format("ddl/%s/%s/%s.sql", chapter, section, templateName);
         final URL ddlTestFile = UniqueDatabase.class.getClassLoader().getResource(ddlFile);
-        assertNotNull("Cannot locate " + ddlFile, ddlTestFile);
+        assertNotNull(STR."Cannot locate \{ddlFile}", ddlTestFile);
         try {
-            try (Connection connection =
-                DriverManager.getConnection(
-                    container.getJdbcUrl(), username, password);
-                Statement statement = connection.createStatement()) {
-                final List<String> statements =
-                    Arrays.stream(
-                            Stream.concat(
-                                    Arrays.stream(CREATE_DATABASE_DDL),
-                                    Files.readAllLines(
-                                            Paths.get(ddlTestFile.toURI()))
-                                        .stream())
-                                .map(String::trim)
-                                .filter(x -> !x.startsWith("--") && !x.isEmpty())
-                                .map(
-                                    x -> {
-                                        final Matcher m =
-                                            COMMENT_PATTERN.matcher(x);
-                                        return m.matches() ? m.group(1) : x;
-                                    })
-                                .map(this::convertSQL)
-                                .collect(Collectors.joining("\n"))
-                                .split(";"))
-                        .map(x -> x.replace("$$", ";"))
-                        .collect(Collectors.toList());
+            try (Connection connection = DriverManager.getConnection(container.getJdbcUrl(),
+                username, password); Statement statement = connection.createStatement()) {
+                final List<String> statements = Arrays.stream(
+                        Stream.concat(Arrays.stream(CREATE_DATABASE_DDL),
+                                Files.readAllLines(Paths.get(ddlTestFile.toURI())).stream())
+                            .map(String::trim).filter(x -> !x.startsWith("--") && !x.isEmpty())
+                            .map(x -> {
+                                final Matcher m = COMMENT_PATTERN.matcher(x);
+                                return m.matches() ? m.group(1) : x;
+                            }).map(this::convertSQL).collect(Collectors.joining("\n")).split(";"))
+                    .map(x -> x.replace("$$", ";")).toList();
                 for (String stmt : statements) {
                     statement.execute(stmt);
                 }
@@ -125,13 +109,13 @@ public class UniqueDatabase {
         }
     }
 
-    /** Drop the database if it is existing. */
+    /**
+     * Drop the database if it is existing.
+     */
     public void dropDatabase() {
         try {
-            try (Connection connection =
-                DriverManager.getConnection(
-                    container.getJdbcUrl(), username, password);
-                Statement statement = connection.createStatement()) {
+            try (Connection connection = DriverManager.getConnection(container.getJdbcUrl(),
+                username, password); Statement statement = connection.createStatement()) {
                 final String dropDatabaseStatement = convertSQL(DROP_DATABASE_DDL);
                 statement.execute(dropDatabaseStatement);
             }
@@ -140,8 +124,17 @@ public class UniqueDatabase {
         }
     }
 
-    public Connection getJdbcConnection() throws SQLException {
-        return DriverManager.getConnection(container.getJdbcUrl(databaseName), username, password);
+    public Connection getJdbcConnection() {
+        try {
+            return DriverManager.getConnection(container.getJdbcUrl(databaseName), username,
+                password);
+        } catch (SQLException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    public String getJdbcUrl() {
+        return container.getJdbcUrl(databaseName);
     }
 
     private String convertSQL(final String sql) {
